<resources>
    <string name="app_name">AryaBrowser</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bACK">Back</string>
    <string name="title_Forward">Forward</string>

    <string name="top_title_newtab">New Tab</string>
    <string name="top_title_history">History</string>
    <string name="top_title_download">Download</string>
    <string name="top_title_desktopsite">Desktop Site</string>
    <string name="helpandfeedback">Help  Feedback</string>
    <string name="top_title_settting">Setting</string>
    <string name="top_title_aboutdeveloper">About Developer</string>
    <string name="top_title_logout">Log Out</string>
    <string name="top_title_login">Log In</string>
    <string name="top_title_LiveTv">Live News</string>
    <string name="go_btn">Go</string>
    <string name="refresh">Refresh</string>
    <string name="favourite">Show Bookmarks</string>
    <string name="download_title">download Title</string>
    <string name="download_file">File Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exitConfirmation">Are you sure you want to Exit</string>
    <string name="developerinfo">

        Name : Mr-Jitendera \n
        From : Yamunanagar Haryana \n
          Mail id : jaibharatmata811@gmail.com \n
          Study In : Jmieti Radaur \n
         Hobbies : Travelling,Internet, Coding and Design; \n
         B-tech: Computer Science engg




    </string>

    <string name="set_text_url">http://</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_title_ScanBarCode">Scan Qr Code</string>
    <string name="Nightmode">Night Mode</string>
    <string name="Normaltmode">Normal Mode</string>
    <string name="Shareurl">Share Url</string>
    <string name="News">Latest News</string>

    <string name="btnFacebook">Facebook</string>
    <string name="btnYoutube">Youtube</string>
    <string name="BtnLinkedln">Linkedln</string>
    <string name="Sarkariresult">Sarkari</string>
    <string name="btnMoviezflix">Moviezflix</string>
    <string name="contactus">Contact us</string>

    <string name="textlinkformail"><a href="http://www.google.com">aryathegreatengineer811@gmail.com</a></string>
    <string name="some_Error_Occur">some error occur</string>
    <!--<string name="textLinkForWebsite"><a href="http://www.google.com">www.google.com</a></string>
    <string name="textLinkforOwnWebsite"><a href="https://mr-jitenderaa.000webhostapp.com/index.html#">Own Wesite Link</a></string>
    <string name="MyResume"><a href="https://jitender8111.github.io/jitenderaresume.github.io/">My_Resume_Using_Html</a></string>&ndash;&gt;-->
</resources>
