<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_Back"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/title_bACK" />

    <item
        android:id="@+id/navigation_Forward"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/title_Forward" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />


    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/top_title_download" />



</menu>
